--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@ body {
 
 /* Customize navigation bar */
 .navbar {
-  background-color: #teal;
+  background-color: #indigo;
   color: ##e6f2e6;
 }
 
