--- a/docs/styles.css
+++ b/docs/styles.css
@@ -1,18 +1,18 @@
 /* css styles */
 /* Change background color and font */
 body {
-  font-family: 'Georgia', serif;
-  background-color: #mintcream;
+  font-family: 'Ogg', serif;
+  background-color: mintcream;
   color: #111111;
 }
 
 /* Customize navigation bar */
 .navbar {
-  background-color: #indigo;
-  color: ##e6f2e6;
+  background-color: teal;
+  color: #e6f2e6;
 }
 
 /* Change link color */
 a {
-  color: #indigo;
+  color: indigo;
 }
