--- a/docs/styles.css
+++ b/docs/styles.css
@@ -16,3 +16,15 @@ body {
 a {
   color: indigo;
 }
+ 
+
+/* Customize headers */
+h1 {
+  color: #003333;
+  letter-spacing: normal;
+}
+h2 {
+  color: #004d4d;
+  letter-spacing: normal;
+}
+
